# Dursan_Chatbot

./: .env.example  Dockerfile  README.md  lambda_scrap.py  pyproject.toml  requirements.txt
api/: api.py  prompts.py
api/modules/: RecommendationParser.py  utils.py
api/tests/: available_brands_in_bbdd.py  gemini_requests.py
bbdd/: BBDD_Connector.py  car_ads.db  car_ads_pre.db
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
scrap/src/models/: CarAd.py  Enums.py
scrap/src/modules/: MainPageCrawler.py
scrap/src/scripts/: crawl_main_page.py
