[project]
name = "scrap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "boto3>=1.40.62",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "google>=3.0.0",
    "google-api-core>=2.28.1",
    "google-genai>=1.43.0",
    "loguru>=0.7.3",
    "ollama>=0.5.3",
    "pandas>=2.3.1",
    "psycopg2>=2.9.11",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "selenium>=4.35.0",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
